create game model

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,6 +6,10 @@
   </div>
 
   <div class="playcard">
+    <% (1..12).to_a.each do |n| %>
+      <label class="answer-label">Answer <%= n %></label>
+        <input class="playcard" id="slot_<%= n %>" type="text"></input>
+    <% end %>
   </div>
 
   <div class="game-controls">
