added a rejected class, computer rejected buttons cannot be toggled

--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -28,3 +28,12 @@
 .score {
 	margin: 50px;
 }
+
+button.rejected {
+	background-color: red;
+}
+
+input.rejected {
+	text-decoration: line-through;
+	background-color: lightgray;
+}
