changing games to rounds for scaling

--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -3,7 +3,7 @@
   <!--Remember that :list_one will be dynamically selected once we give users a choice as to which list they're playing on-->
   <div class="playcards">
     <% n = 1 %>
-    <% @game.category_list.sample.each do |category| %>
+    <% @round.category_list.sample.each do |category| %>
       <label class="answer-label" id="slot-<%= n %>" ><%= category %>
         <input class="playcard" id="answer-<%= n %>" name="<%= n %>" type="text">
       </label><br/>
