fields are disabled until a user starts the timer

--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -5,7 +5,7 @@
     <% n = 1 %>
     <% @round.category_list.sample.each do |category| %>
       <label class="answer-label" id="slot-<%= n %>" ><%= category %>
-        <input class="playcard" id="answer-<%= n %>" name="<%= n %>" type="text">
+        <input class="playcard" id="answer-<%= n %>" name="<%= n %>" type="text" disabled="disabled">
       </label><br/>
       <% n+= 1 %>
     <% end %>
