--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -2,14 +2,14 @@
   <header>Welcome to Scattergories</header>
   <!--Remember that :list_one will be dynamically selected once we give users a choice as to which list they're playing on-->
   <div class="playcards">
-    <% n = 1 %>
+    <%# n = 1 %>
 
-    <% $redis.smembers(@game_category).each do |category_item| %>
-      <label class="answer-label" id="slot-<%= n %>" ><%= category_item %>
-        <input class="playcard" id="answer-<%= n %>" name="<%= n %>" type="text" disabled="disabled">
-      </label><br/>
-      <% n+= 1 %>
-    <% end %>
+    <%# $redis.smembers(@game_category).each do |category_item| %>
+      <!-- <label class="answer-label" id="slot-<%# n %>" ><%# category_item %> -->
+        <!-- <input class="playcard" id="answer-<%# n %>" name="<%# n %>" type="text" disabled="disabled"> -->
+      <!-- </label><br/> -->
+      <%# n+= 1 %>
+    <%# end %>
   </div>
 
   <div class="game-controls">
