--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -6,7 +6,7 @@
 	display: inline-block;
 	vertical-align: top;
 	text-align: left;
-	margin: 0px 25px 0px 100px;
+	/*margin: 0px 25px 0px 100px;*/
 }
 
 .die {
