--- a/app/views/rounds/new.html.erb
+++ b/app/views/rounds/new.html.erb
@@ -1,6 +1,9 @@
-<h1>Scattergories</h1>
-<div>
-  <%= form_for  @round do |f|%>
-  <%= f.submit "New Game" %>
-  <% end %>
+<div class="page-wrapper">
+  <h1>Scattergories</h1>
+  <%= image_tag("Scattegories-logo1.png", :alt => "Scattergories") %>
+  <div>
+    <%= form_for  @round do |f|%>
+      <%= f.submit "New Game" %>
+    <% end %>
+  </div>
 </div>
