--- a/app/views/rounds/new.html.erb
+++ b/app/views/rounds/new.html.erb
@@ -1,4 +1,4 @@
-<div class="page-wrapper">
+<!-- <div class="page-wrapper"> -->
   <h1>Scattergories</h1>
   <%= image_tag("Scattegories-logo1.png", :alt => "Scattergories") %>
   <div>
@@ -6,4 +6,4 @@
       <%= f.submit "New Game" %>
     <% end %>
   </div>
-</div>
+<!-- </div> -->
