--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -1,4 +1,4 @@
-<div class="page-wrapper">
+<!-- <div class="page-wrapper"> -->
 
   <header>
 
@@ -11,6 +11,9 @@
     <h1>Welcome to Scattergories</h1>
 
   </header>
+
+  <status>
+  </status>
   <!--Remember that :list_one will be dynamically selected once we give users a choice as to which list they're playing on-->
 
   <div class="content-container">
@@ -45,4 +48,4 @@
   <div class="clear">
   </div>
   
-</div>
+<!-- </div> -->
